--- a/experimental/nomad_resource_plugin/licensedevice/cmd/nomad_license_plugin/BUILD.bazel
+++ b/experimental/nomad_resource_plugin/licensedevice/cmd/nomad_license_plugin/BUILD.bazel
@@ -6,7 +6,10 @@ go_library(
     importpath = "github.com/enfabrica/enkit/experimental/nomad_resource_plugin/licensedevice/cmd/nomad_license_plugin",
     visibility = ["//visibility:private"],
     deps = [
+        "//lib/metrics",
+        "//lib/server",
         "//experimental/nomad_resource_plugin/licensedevice",
+        "@com_github_golang_glog//:glog",
         "@com_github_hashicorp_go_hclog//:go-hclog",
         "@com_github_hashicorp_nomad//plugins",
     ],
@@ -15,5 +18,21 @@ go_library(
 go_binary(
     name = "nomad_license_plugin",
     embed = [":nomad_license_plugin_lib"],
+    visibility = ["//visibility:public"],
+)
+
+sh_binary(
+    name = "stat",
+    srcs = ["gsutil_stat.sh"],
+    args = ["$(location :nomad_license_plugin)"],
+    data = [":nomad_license_plugin"],
+    visibility = ["//visibility:public"],
+)
+
+sh_binary(
+    name = "push",
+    srcs = ["gsutil_push.sh"],
+    args = ["$(location :nomad_license_plugin)"],
+    data = [":nomad_license_plugin"],
     visibility = ["//visibility:public"],
 )
