licensedevice: Set incoming logger as slog's default
This change adapts the incoming `hclog.Logger` and sets it as `slog`s
default logger, so that slog can be used throughout the codebase without
logging to stdout/stderr accidentally.

Nomad requires that device plugins not log to stdin/stdout, using the
supplied logger object instead. One way to comply is to plumb this
logger object throughout, or make it global; both have drawbacks:

* loggers pollute function signatures
* polluted function signatures make said functions more tedious to test
* linked code may use other logging libraries that are not aware of this
  constraint

By following this method, we ensure that the global logger future
library code is likely to use doesn't break the plugin's contract, while
also keeping function signatures clean.

Tested: TODO: run, make sure it works as expected

Jira: INFRA-9678

--- a/experimental/nomad_resource_plugin/licensedevice/BUILD.bazel
+++ b/experimental/nomad_resource_plugin/licensedevice/BUILD.bazel
@@ -10,12 +10,12 @@ go_library(
         "//experimental/nomad_resource_plugin/licensedevice/sqldb",
         "//experimental/nomad_resource_plugin/licensedevice/types",
         "//lib/str",
-        "@com_github_hashicorp_go_hclog//:go-hclog",
         "@com_github_hashicorp_nomad//plugins/base",
         "@com_github_hashicorp_nomad//plugins/device",
         "@com_github_hashicorp_nomad//plugins/shared/hclspec",
         "@com_github_prometheus_client_golang//prometheus",
         "@com_github_prometheus_client_golang//prometheus/promauto",
+        "@org_golang_x_exp//slog",
     ],
 )
 
