--- a/experimental/nomad_resource_plugin/licensedevice/cmd/nomad_license_plugin/BUILD.bazel
+++ b/experimental/nomad_resource_plugin/licensedevice/cmd/nomad_license_plugin/BUILD.bazel
@@ -6,12 +6,12 @@ go_library(
     importpath = "github.com/enfabrica/enkit/experimental/nomad_resource_plugin/licensedevice/cmd/nomad_license_plugin",
     visibility = ["//visibility:private"],
     deps = [
-        "//lib/metrics",
-        "//lib/server",
         "//experimental/nomad_resource_plugin/licensedevice",
-        "@com_github_golang_glog//:glog",
+        "//lib/metrics",
+        "@com_github_evanphx_go_hclog_slog//hclogslog",
         "@com_github_hashicorp_go_hclog//:go-hclog",
         "@com_github_hashicorp_nomad//plugins",
+        "@org_golang_x_exp//slog",
     ],
 )
 
