--- a/requirements.in
+++ b/requirements.in
@@ -2,6 +2,7 @@ absl-py>=1.4.0
 attrs>=22.2.0
 click>=8.1.3
 click-logging>=1.0.1
+docker==6.0.1
 importlib-metadata>=4.11.3
 jinja2>=3.1.1
 jinja2-strcase>=0.0.2
