--- a/bb_reporter/BUILD.bazel
+++ b/bb_reporter/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
+load("//bazel/utils/container:container.bzl", "container_image", "container_push")
 
 go_library(
     name = "bb_reporter_lib",
@@ -29,7 +29,7 @@ pkg_tar(
     package_dir = "/enfabrica/bin",
 )
 
-oci_image(
+container_image(
     name = "bb_reporter_image",
     base = "@container_golang_base",
     entrypoint = [
@@ -40,9 +40,10 @@ oci_image(
     ],
 )
 
-oci_push(
+container_push(
     name = "bb_reporter_image_push",
     image = ":bb_reporter_image",
+    image_path = "services/bb_reporter",
+    namespace = "infra",
     remote_tags = ["latest"],
-    repository = "gcr.io/devops-284019/infra/services/bb_reporter",
 )
