--- a/shims/buildbuddy/cmd/BUILD.bazel
+++ b/shims/buildbuddy/cmd/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
+load("//bazel/utils/container:container.bzl", "container_image", "container_push")
 
 go_library(
     name = "cmd_lib",
@@ -25,16 +25,17 @@ pkg_tar(
     package_dir = "/enfabrica/bin",
 )
 
-oci_image(
+container_image(
     name = "image",
     base = "@container_golang_base",
     entrypoint = ["/enfabrica/bin/cmd"],
     tars = [":tar"],
 )
 
-oci_push(
+container_push(
     name = "image_push",
     image = ":image",
+    image_path = "bb-shim",
+    namespace = "infra",
     remote_tags = ["latest"],
-    repository = "gcr.io/devops-284019/infra/bb-shim",
 )
