--- a/bestie/server/BUILD.bazel
+++ b/bestie/server/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("//bazel/utils/container:container.bzl", "container_push", "container_image")
+load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
 go_library(
@@ -46,7 +46,7 @@ pkg_tar(
     package_dir = "/enfabrica/bin",
 )
 
-container_image(
+oci_image(
     name = "bestie_image",
     base = "@container_golang_base",
     entrypoint = [
@@ -57,10 +57,9 @@ container_image(
     ],
 )
 
-container_push(
+oci_push(
     name = "bestie_image_push",
     image = ":bestie_image",
-    image_path = "bestie",
     remote_tags = ["latest"],
-    namespace = "infra",
+    repository = "gcr.io/devops-284019/infra/bestie",
 )
