Update visibility of dynamically generated targets

--- a/bazel/utils/container/BUILD.bazel
+++ b/bazel/utils/container/BUILD.bazel
@@ -50,13 +50,8 @@ py_binary(
         ":stamp",
         requirement("absl-py"),
     ],
+    # Allow the internal repo to access this target
     visibility = [
-        "//bb_reporter:__subpackages__",
-        "//shims:__subpackages__",
-        "//proxy:__subpackages__",
-        "//bestie:__subpackages__",
-        "//infra:__subpackages__",
-        "//machinist:__subpackages__",
-        "//monitor:__subpackages__",
+        "//visibility:public",
     ],
 )
