Update visibility so the internal repo can reference enkit targets (#1052)
The `container_image` and `container_push` rule dynamically generate
targets which bazel references relative to where the target was created.
This change explicitly declares the full repo path to dependencies of
targets that are dynamically generated so that bazel knows the correct
path to resolve.

Tested:
- `bazel run --override_repository=enkit=$HOME/enkit
//infra/puppet:puppet_server_image_exec`
- `bazel run --override_repository=enkit=$HOME/enkit
//infra/puppet:base_puppet_server_image_builder --
--noclean_build_check`
- `bazel run --override_repository=enkit=$HOME/enkit
//infra/puppet:puppet_server_image_push -- --noclean_build_check`

JIRA: INFRA-9581

--- a/bazel/utils/container/BUILD.bazel
+++ b/bazel/utils/container/BUILD.bazel
@@ -1,3 +1,6 @@
+# The directory internal/bazel/utils/container must exist in the internal
+# repo so that dynamically generated targets from the enkit repo can be 
+# referenced locally within the internal repo
 load("@enkit_pip_deps//:requirements.bzl", "requirement")
 
 exports_files(["container_pusher.py"])
@@ -50,13 +53,8 @@ py_binary(
         ":stamp",
         requirement("absl-py"),
     ],
+    # Allow the internal repo to access this target
     visibility = [
-        "//bb_reporter:__subpackages__",
-        "//shims:__subpackages__",
-        "//proxy:__subpackages__",
-        "//bestie:__subpackages__",
-        "//infra:__subpackages__",
-        "//machinist:__subpackages__",
-        "//monitor:__subpackages__",
+        "//visibility:public",
     ],
 )
