--- a/bazel/utils/container/muk/BUILD.bazel
+++ b/bazel/utils/container/muk/BUILD.bazel
@@ -12,6 +12,7 @@ py_binary(
         requirement("absl-py"),
         requirement("docker"),
     ],
+    visibility = ["//visibility:public"],
 )
 
 py_proto_library(
