--- a/bestie/server/BUILD.bazel
+++ b/bestie/server/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
-load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
+load("//bazel/utils/container:container.bzl", "container_push", "container_image")
 
 go_library(
     name = "server_lib",
@@ -46,7 +46,7 @@ pkg_tar(
     package_dir = "/enfabrica/bin",
 )
 
-oci_image(
+container_image(
     name = "bestie_image",
     base = "@container_golang_base",
     entrypoint = [
@@ -57,9 +57,10 @@ oci_image(
     ],
 )
 
-oci_push(
+container_push(
     name = "bestie_image_push",
     image = ":bestie_image",
+    image_path = "bestie",
+    namespace = "infra",
     remote_tags = ["latest"],
-    repository = "gcr.io/devops-284019/infra/bestie",
 )
