--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
-*.sh @jonathan-enf @ccontavalli @ahungrynacho @minor-fixes @aaahrens
-/scripts @amichalol @jonathan-enf @ccontavalli @minor-fixes
+*.sh @jonathan-enf @ccontavalli @ahungrynacho @mhallmark
+/scripts @amichalol @jonathan-enf @ccontavalli @mhallmark
 
