--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
 *.sh @jonathan-enf @ccontavalli @ahungrynacho @mhallmark
-/scripts @amichalol @jonathan-enf @ccontavalli @mhallmark
+/scripts @jonathan-enf @ccontavalli @mhallmark
 
