Create new allocation_manager/ tree

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,4 @@
 *.sh @jonathan-enf @ccontavalli @ahungrynacho @mhallmark
 /scripts @jonathan-enf @ccontavalli @mhallmark
+allocation_manager/ @kjw-enf @ccontavalli @moksh-enf
 
