--- a/flextape/server/BUILD.bazel
+++ b/flextape/server/BUILD.bazel
@@ -4,7 +4,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "server_lib",
     srcs = ["main.go"],
-    embedsrcs = glob(["templates/*.tmpl"]),
+    embedsrcs = glob(["templates/*.tmpl"]),  # keep
     importpath = "github.com/enfabrica/enkit/flextape/server",
     visibility = ["//visibility:private"],
     deps = [
