--- a/allocation_manager/client/allocation_manager_client/BUILD.bazel
+++ b/allocation_manager/client/allocation_manager_client/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "//allocation_manager/proto:go_default_library",
         "@com_github_google_uuid//:uuid",
         "@org_golang_google_grpc//:go_default_library",
+        "@in_gopkg_yaml_v3//:yaml_v3",
     ],
 )
 
