--- a/allocation_manager/client/BUILD.bazel
+++ b/allocation_manager/client/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "client",
@@ -8,19 +8,6 @@ go_library(
         "//allocation_manager/client/allocation_manager_client:__pkg__",
     ],
     deps = ["//allocation_manager/proto"],
-)
-
-go_test(
-    name = "client_test",
-    srcs = ["client_test.go"],
-    embed = [":client"],
-    deps = [
-        "//flextape/proto:go_default_library",
-        "//lib/errdiff",
-        "@com_github_stretchr_testify//assert",
-        "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_protobuf//types/known/timestamppb",
-    ],
 )
 
 alias(
