--- a/allocation_manager/client/allocation_manager_client/BUILD.bazel
+++ b/allocation_manager/client/allocation_manager_client/BUILD.bazel
@@ -8,10 +8,9 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//allocation_manager/client",
-        "//allocation_manager/proto:go_default_library",
-        "@com_github_google_uuid//:uuid",
-        "@org_golang_google_grpc//:go_default_library",
+        "//allocation_manager/proto",
         "@in_gopkg_yaml_v3//:yaml_v3",
+        "@org_golang_google_grpc//:go_default_library",
     ],
 )
 
