--- a/bazel/utils/container/muk/BUILD.bazel
+++ b/bazel/utils/container/muk/BUILD.bazel
@@ -1,3 +1,5 @@
+load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
 load("@enkit_pip_deps//:requirements.bzl", "requirement")
 load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library", "jsonnet_to_json")
@@ -6,13 +8,13 @@ py_binary(
     name = "muk",
     srcs = ["main.py"],
     main = "main.py",
+    visibility = ["//visibility:public"],
     deps = [
         ":muk_lib",
         ":muk_py_proto",
         requirement("absl-py"),
         requirement("docker"),
     ],
-    visibility = ["//visibility:public"],
 )
 
 py_proto_library(
@@ -56,8 +58,8 @@ jsonnet_library(
     name = "base",
     srcs = ["base.libsonnet"],
     deps = [
-        ":util",
         ":packages",
+        ":util",
     ],
 )
 
@@ -69,4 +71,23 @@ jsonnet_library(
 jsonnet_library(
     name = "util",
     srcs = [":util.libsonnet"],
+)
+
+proto_library(
+    name = "infra_dev_container_muk_proto",
+    srcs = ["muk.proto"],
+    visibility = ["//visibility:public"],
+)
+
+go_proto_library(
+    name = "infra_dev_container_muk_go_proto",
+    importpath = "github.com/enfabrica/enkit/bazel/utils/container/muk",
+    proto = ":infra_dev_container_muk_proto",
+    visibility = ["//visibility:public"],
+)
+
+alias(
+    name = "go_default_library",
+    actual = ":muk",
+    visibility = ["//visibility:public"],
 )
