--- a/bazel/utils/BUILD.bazel
+++ b/bazel/utils/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
-load("//bazel/utils:diff_test.bzl", "diff_test", "extract_file", "md5sum_diff_test", "diff_test_suite")
+load("//bazel/utils:diff_test.bzl", "diff_test", "diff_test_suite", "extract_file", "md5sum_diff_test")
 load("//bazel/utils:types.bzl", "escape_and_join")
 load("//bazel/utils:merge_kwargs_test.bzl", "merge_kwargs_test_suite")
 load("//bazel/utils:files.bzl", "write_to_file")
@@ -102,13 +102,17 @@ sh_test(
 # Validate the extract_file test:
 filegroup(
     name = "abc",
-    srcs = ["testdata/a.txt", "testdata/b.txt", "testdata/c.txt"],
+    srcs = [
+        "testdata/a.txt",
+        "testdata/b.txt",
+        "testdata/c.txt",
+    ],
 )
 
 extract_file(
     name = "a",
-    target = ":abc",
     path = "bazel/utils/testdata/a.txt",
+    target = ":abc",
 )
 
 diff_test(
@@ -121,8 +125,8 @@ diff_test(
 diff_test_suite(
     name = "diff_tests",
     files = [
-      "escape_and_join1.actual",
-      ":a",
+        "escape_and_join1.actual",
+        ":a",
     ],
 )
 
@@ -130,9 +134,9 @@ diff_test_suite(
 md5sum_diff_test(
     name = "md5sum_diff_test_test",
     srcs = [
-      "escape_and_join1.actual",
-      ":a",
-      "testdata/a.expected.txt",
+        "escape_and_join1.actual",
+        "testdata/a.expected.txt",
+        ":a",
     ],
 )
 
