--- a/bestie/server/BUILD.bazel
+++ b/bestie/server/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
-load("//bazel/utils/container:container.bzl", "container_push", "container_image")
+load("//bazel/utils/container:container.bzl", "container_image", "container_push")
 
 go_library(
     name = "server_lib",
