--- a/allocation_manager/service/BUILD.bazel
+++ b/allocation_manager/service/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "service",
@@ -26,4 +26,17 @@ alias(
     name = "go_default_library",
     actual = ":service",
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "service_test",
+    srcs = [
+        "queue_test.go",
+        "unit_test.go",
+    ],
+    embed = [":service"],
+    deps = [
+        "//allocation_manager/proto",
+        "@com_github_stretchr_testify//assert",
+    ],
 )
