--- a/allocation_manager/proto/BUILD.bazel
+++ b/allocation_manager/proto/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 
@@ -6,9 +7,7 @@ proto_library(
     name = "allocation_manager_proto",
     srcs = ["allocation_manager.proto"],
     visibility = ["//visibility:public"],
-    deps = [
-        "@com_google_protobuf//:timestamp_proto",
-    ],
+    deps = ["@com_google_protobuf//:timestamp_proto"],
 )
 
 proto_library(
@@ -25,6 +24,13 @@ go_proto_library(
     importpath = "github.com/enfabrica/enkit/allocation_manager/proto",
     proto = ":proto_proto",
     visibility = ["//visibility:public"],
+)
+
+py_proto_library(
+    name = "allocation_manager_py_proto",
+    srcs = ["allocation_manager.proto"],
+    visibility = ["//visibility:public"],
+    deps = ["@com_google_protobuf//:protobuf_python"],
 )
 
 proto_library(
