--- a/bazel/utils/container/BUILD.bazel
+++ b/bazel/utils/container/BUILD.bazel
@@ -8,6 +8,7 @@ exports_files([
     "bootstrap_ubuntu.sh",
     "bootstrap_ubuntu_image.sh",
     "ubuntu_pkg.sh",
+    "chroot_ubuntu.sh",
 ])
 
 genrule(
