--- a/allocation_manager/server/BUILD.bazel
+++ b/allocation_manager/server/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "//allocation_manager/proto",
         "//allocation_manager/service",
         "//lib/server",
+        "@com_github_prometheus_client_golang//prometheus/promhttp",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_protobuf//encoding/prototext",
     ],
