Client (Go) now parses yaml and uses name from the yaml (removed Unit name from command-line). Server (Go) now parses inventory yaml. Created new topology/ to share (Go) yaml parsing code.

--- a/allocation_manager/client/allocation_manager_client/BUILD.bazel
+++ b/allocation_manager/client/allocation_manager_client/BUILD.bazel
@@ -9,7 +9,7 @@ go_library(
     deps = [
         "//allocation_manager/client",
         "//allocation_manager/proto",
-        "@in_gopkg_yaml_v3//:yaml_v3",
+        "//allocation_manager/topology",
         "@org_golang_google_grpc//:go_default_library",
     ],
 )
