Add yaml handling to golang server and client. (#1119)
- Add yaml and bundle handling to go client.
- Add yaml  handling to go server.

--- a/allocation_manager/client/allocation_manager_client/BUILD.bazel
+++ b/allocation_manager/client/allocation_manager_client/BUILD.bazel
@@ -1,5 +1,5 @@
-load("//bazel/astore:defs.bzl", "astore_upload")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("//bazel/astore:defs.bzl", "astore_upload")
 
 go_library(
     name = "allocation_manager_client_lib",
@@ -9,7 +9,7 @@ go_library(
     deps = [
         "//allocation_manager/client",
         "//allocation_manager/proto",
-        "@in_gopkg_yaml_v3//:yaml_v3",
+        "//allocation_manager/topology",
         "@org_golang_google_grpc//:go_default_library",
     ],
 )
