Expand allocation_manager/topology/ lib to provide more ways to load yaml.

--- a/allocation_manager/client/BUILD.bazel
+++ b/allocation_manager/client/BUILD.bazel
@@ -7,7 +7,10 @@ go_library(
     visibility = [
         "//allocation_manager/client/allocation_manager_client:__pkg__",
     ],
-    deps = ["//allocation_manager/proto"],
+    deps = [
+        "//allocation_manager/proto",
+        "//allocation_manager/topology",
+        ],
 )
 
 alias(
