codegen: add `tostderr` filter (#1112)
codegen: add `tostderr` filter

This extension allows jinja2 scripts to emit text to standard logging during
code generation. This feature will ease the debugging of jinja2 templates.

Tested:

```
$ bazel build :gen-test-actual-gen
INFO: Analyzed target //tools/codegen/tests:gen-test-actual-gen (0 packages loaded, 0 targets configured).
INFO: Found 1 target...
INFO: From Generating "tools/codegen/tests/gen-test.actual":
I0924 17:26:28.055019 140036723234624 codegen.py:118] tools/codegen/tests/test.template:5: bar
Target //tools/codegen/tests:gen-test-actual-gen up-to-date:
  bazel-bin/tools/codegen/tests/gen-test.actual
INFO: Elapsed time: 0.725s, Critical Path: 0.63s
INFO: 2 processes: 1 internal, 1 linux-sandbox.
INFO: Build completed successfully, 2 total actions

```

--- a/tools/codegen/tests/test.template
+++ b/tools/codegen/tests/test.template
@@ -2,6 +2,7 @@ over={{over}}
 zoo={{zoo}}
 foo={{foo}}
 camel={{foo|to_screaming_snake}}
+{{-foo|log}}
 tooth={{"tooth"|re_sub("o", "a")}}
 tooth={{re_sub("foo", "o", "a")}}
 {%- for t in bum %}
