Clean build with pre and post installation steps

--- a/bazel/utils/container/BUILD.bazel
+++ b/bazel/utils/container/BUILD.bazel
@@ -8,7 +8,8 @@ exports_files([
     "bootstrap_ubuntu.sh",
     "bootstrap_ubuntu_image.sh",
     "ubuntu_pkg.sh",
-    "chroot_ubuntu.sh",
+    "prepostinstall_ubuntu.sh",
+    "install_ubuntu.sh",
 ])
 
 genrule(
