Implement container build rules using debootstrap (#1099)
This change implements custom container build rules using the
`debootstrap` tool. Unlike using `rules_distroless`, this approach
installs and configures packages correctly while also distributing the
container build process.

Make sure to merge this first before merging
https://github.com/enfabrica/internal/pull/45936

Tested:
- `bazel run //infra/dev_container/hw_dev_v3:load_hw_dev_image
--override_repository=enkit=$HOME/enkit
--spawn_strategy=processwrapper-sandbox
--experimental_ui_max_stdouterr_bytes=-1` locally on a shared dev
machine

JIRA: ENGPROD-16

--- a/bazel/utils/container/BUILD.bazel
+++ b/bazel/utils/container/BUILD.bazel
@@ -3,7 +3,14 @@
 # referenced locally within the internal repo
 load("@enkit_pip_deps//:requirements.bzl", "requirement")
 
-exports_files(["container_pusher.py"])
+exports_files([
+    "container_pusher.py",
+    "bootstrap_ubuntu.sh",
+    "ubuntu_pkg.sh",
+    "ubuntu_base.sh",
+    "prepostinstall_ubuntu.sh",
+    "install_ubuntu.sh",
+])
 
 genrule(
     name = "stable_status",
