Fix server build target name so that the binary filename isn't just "server"

--- a/allocation_manager/server/BUILD.bazel
+++ b/allocation_manager/server/BUILD.bazel
@@ -34,7 +34,7 @@ alias(
 )
 
 go_binary(
-    name = "server",
+    name = "allocation_manager_server",
     embed = [":server_lib"],
     visibility = ["//visibility:public"],
 )
