--- a/allocation_manager/server/BUILD.bazel
+++ b/allocation_manager/server/BUILD.bazel
@@ -22,7 +22,7 @@ astore_upload(
     name = "astore_push",
     file = "infra/allocation_manager/server",
     targets = [
-        ":server",
+        ":allocation_manager_server",
     ],
     visibility = ["//:__pkg__"],
 )
@@ -34,7 +34,7 @@ alias(
 )
 
 go_binary(
-    name = "server",
+    name = "allocation_manager_server",
     embed = [":server_lib"],
     visibility = ["//visibility:public"],
 )
