dropbear: Link dynamically to avoid crashing in dynamic NSS modules

--- a/bazel/dependencies/dropbear.BUILD.bazel
+++ b/bazel/dependencies/dropbear.BUILD.bazel
@@ -6,7 +6,7 @@ configure_make(
     name = "binaries",
     lib_source = ":all",
     configure_options = [
-        "--enable-static",
+        "--disable-static",
         "--enable-bundled-libtom",
     ] + select({
         "@//bazel/platforms:e1_gnu_build": [
