dropbear: disable login auditing
This stops "permission denied" messages when attempting to log to a read-only filesystem

--- a/bazel/dependencies/dropbear.BUILD.bazel
+++ b/bazel/dependencies/dropbear.BUILD.bazel
@@ -6,6 +6,12 @@ configure_make(
     name = "binaries",
     lib_source = ":all",
     configure_options = [
+        "--disable-lastlog",
+        "--disable-utmp",
+        "--disable-utmpx",
+        "--disable-wtmp",
+        "--disable-wtmpx",
+        "--disable-loginfunc",
         "--disable-static",
         "--enable-bundled-libtom",
     ] + select({
