--- a/.bazelrc
+++ b/.bazelrc
@@ -3,6 +3,7 @@
 # see https://docs.bazel.build/versions/master/guide.html#bazelrc
 #
 # The full list of Bazel options: https://docs.bazel.build/versions/master/command-line-reference.html
+build --cxxopt="-std=c++17"  --host_cxxopt="-std=c++17" --client_env=BAZEL_CXXOPTS=-std=c++17
 
 build --workspace_status_command "/bin/bash bazel/workspace_status.sh"
 
