go: Tidy go.mod, make BUILD files gazelle-clean
This change:

* performs a `go mod tidy` and arranges dependencies into two `require`
  sections: one containing only direct deps, and the other containing
  only indirect deps.
* makes the repo "gazelle-clean" (`bazel run //:gazelle` succeeds with
  no errors, and generates no diffs). In order to do this, missing
  `empty.go` markers were added to proto dirs missing them, and a
  Gazelle directive was added to exclude all `empty.go` files from
  generated rules.
* removes the `go_rbe` target that embeds the remote-apis codegen, in
  favor of a Gazelle directive that resolves to the original target;
  this may avoid duplicate linking issues in the future.

Tested: Some targets build locally (testing is limited due to ACL issues
pulling container images)

--- a/astore/server/configs/BUILD.bazel
+++ b/astore/server/configs/BUILD.bazel
@@ -13,10 +13,9 @@ go_embed_data(
 go_library(
     name = "configs",
     srcs = [
-        "empty.go",
         ":embedded-configs",  # keep
     ],
-    importpath = "github.com/enfabrica/enkit/astore/server/configs",
+    importpath = "github.com/enfabrica/enkit/astore/server/configs",  # keep
     visibility = ["//visibility:public"],
 )
 
