--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -21,6 +21,17 @@ load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirem
 # Set the prefix for this repo
 # gazelle:prefix github.com/enfabrica/enkit
 
+# When adding protos used by Go, typically the import path is the same as the
+# proto's containing dir. However, this will confuse Go tooling (`go mod tidy`,
+# for instance) when there are no source files present.
+#
+# To work around this, add a source file called `empty.go` with only a package
+# declaration, so from the Go tooling's perspective it is a legitimate package.
+# The directive below will prevent `empty.go` files from being added to
+# Gazelle-generated rules.
+#
+# gazelle:exclude **/empty.go
+
 # Ensure that BUILD files have targets generated with the correct convention
 # TODO(scott): Change to `import` after targets have migrated to use the new
 # convention
@@ -47,6 +58,7 @@ gazelle(
 # These mappings keep gazelle from generating bogus dependency labels.
 #
 # gazelle:resolve go kythe.io/kythe/go/platform/delimited @io_kythe//kythe/go/platform/delimited
+# gazelle:resolve go github.com/bazelbuild/remote-apis/build/bazel/remote/execution/v2 @com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution
 
 # Buildbarn gazelle resolve mappings
 # Buildbarn dependencies may need certain overrides; these mappings are copied
