--- a/auth/server/assets/assets/BUILD.bazel
+++ b/auth/server/assets/assets/BUILD.bazel
@@ -36,10 +36,9 @@ go_embed_data(
 go_library(
     name = "assets",
     srcs = [
-        "empty.go",
         ":embedded-assets",  # keep
     ],
-    importpath = "github.com/enfabrica/enkit/auth/server/assets/assets",
+    importpath = "github.com/enfabrica/enkit/auth/server/assets/assets",  # keep
     visibility = ["//visibility:public"],
 )
 
