--- a/proxy/credentials/BUILD.bazel
+++ b/proxy/credentials/BUILD.bazel
@@ -13,10 +13,9 @@ go_embed_data(
 go_library(
     name = "credentials",
     srcs = [
-        "empty.go",
         ":embedded-credentials",  # keep
     ],
-    importpath = "github.com/enfabrica/enkit/proxy/credentials",
+    importpath = "github.com/enfabrica/enkit/proxy/credentials",  # keep
     visibility = ["//visibility:public"],
 )
 
