--- a/bestie/proto/BUILD.bazel
+++ b/bestie/proto/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
+load("@rules_python//python:proto.bzl", "py_proto_library")
 load("@rules_proto//proto:defs.bzl", "proto_library")
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
@@ -39,6 +39,6 @@ go_library(
 
 py_proto_library(
     name = "bestie_py_proto",
-    srcs = ["test_metrics.proto"],
+    deps = [":test_metrics_proto"],
     visibility = ["//visibility:public"],
 )
