--- a/.bazelrc
+++ b/.bazelrc
@@ -35,3 +35,4 @@ try-import %workspace%/.bazelrc.user
 build --noenable_bzlmod
 run --noenable_bzlmod
 test --noenable_bzlmod
+query --noenable_bzlmod
