--- a/.bazelrc
+++ b/.bazelrc
@@ -29,3 +29,5 @@ try-import %workspace%/.bazelrc.user
 # TODO(INFRA-4384): Remove this flag once all dependencies are compatible with
 # the new platforms repo for constraints.
 build --noincompatible_use_platforms_repo_for_constraints
+
+common --enable_bzlmod
