astore server: Embed configs using `embedsrcs`
This change modifies how client configs are embedded into the astore
server (if at all), removing uses of `go_embed_data` in favor of
`embedsrcs`.

An example config is added so that the directory is present, and to
prove that `gazelle` integration + building works as expected; however,
whether it is safe to include such a config by default in future builds
should be reviewed.

Tested: builds/unit tests only

--- a/astore/server/configs/BUILD.bazel
+++ b/astore/server/configs/BUILD.bazel
@@ -1,22 +1,12 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
-load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")
-
-# Generate a .go file containing all the configs supplied during the build.
-go_embed_data(
-    name = "embedded-configs",
-    srcs = glob(["**/*.config*"]),
-    flatten = True,
-    package = "configs",
-    visibility = ["//visibility:public"],
-)
 
 go_library(
     name = "configs",
-    srcs = [
-        ":embedded-configs",  # keep
-    ],
+    srcs = ["configs.go"],
+    embedsrcs = glob(["static/*"]),
     importpath = "github.com/enfabrica/enkit/astore/server/configs",  # keep
     visibility = ["//visibility:public"],
+    deps = ["//lib/khttp/kassets"],
 )
 
 alias(
